CSAT question flex fix and language drop down for top alignment fix

--- a/src/css/_question-select.scss
+++ b/src/css/_question-select.scss
@@ -105,7 +105,7 @@
 
 .cc-sdk .cc-popup-container-2.top .cc-select-options-container,
 .cc-sdk .cc-popup-container-2.top .cc-select.opened .cc-select-options-container {
-    transform: translateY(-100%) translateY(75px);
+    transform: translateY(-100%) translateY(17px);
 }
 
 .cc-sdk .cc-select-options:before {
